# quiver

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .sqlfluffignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SECURITY_BAR.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  detector-scoring.yml  (+5 more)
docs/: AGENT_DATA_LAKE_FLOW.md  AGENT_QUICKSTART.md  ARCHITECTURE.md  CLICKHOUSE_DATA_LAKE.md  COVERAGE_MODEL.md  COVERAGE_SNAPSHOT.md  DATA_HANDLING.md  DESIGN_DECISIONS.md  FRAMEWORK_COVERAGE.md  FRAMEWORK_MAPPINGS.md  HARNESS.md  HITL_POLICY.md  INGEST_COVERAGE.md  INSTALL.md  MCP_AUDIT_CONTRACT.md  MCP_TRANSPORT.md  NATIVE_VS_OCSF.md  NORMALIZATION_REFERENCE.md  PERFORMANCE.md  QUICKSTART.md  RELEASE_CHECKLIST.md  REMEDIATION_VERIFICATION.md  ROADMAP.md  RUNTIME_ISOLATION.md  RUNTIME_PROFILES.md  RUNTIME_PROFILES_SKILLS.md  SECURITY_GRADES.md  SIEM_INDEX_GUIDE.md  SKILL_COMPOSITION.md  SKILL_CONTRACT.md  SKILL_INDEX.md  SNOWFLAKE_DATA_LAKE.md  SUPPLY_CHAIN.md  TESTING.md  WHY.md  WORKDAY_OCSF_DEPARTURES.md  framework-coverage.json
mcp-server/: README.md
presets/: README.md  preset-ai-runtime.json  preset-cspm-readonly.json  preset-detection-only.json  preset-incident-response.json  preset-open-model-readonly.json
runners/: DEPLOYMENT_VERIFICATION.md  README.md
scripts/: _runner_e2e_harness.py  add_skill_trust_frontmatter.py  benchmark_runtime_profiles.py  build_runtime_profiles_doc.py  check_runtime_profile_regressions.py  check_secret_literals.py  coverage_summary.py  generate_framework_coverage_doc.py  regen_security_grades.py  rotate_mcp_sse_bearer_key.py  runner_e2e.sh  score_pr_detectors.sh  skill_validation_common.py  validate_captured_provenance.py  validate_deny_list_parity.py  validate_dependency_consistency.py  validate_doc_counts.py  validate_doc_parity.py  validate_framework_coverage.py  validate_framework_depth.py  validate_golden_ocsf.py  validate_golden_pipes.py  validate_mcp_tool_schemas.py  validate_presets.py  validate_remediation_infra.py  validate_safe_skill_bar.py  validate_skill_contract.py  validate_skill_count_consistency.py  validate_skill_integrity.py  validate_skill_runtime.py  validate_skill_structure.py  validate_test_coverage.py  verify_audit_chain.py
skills/: README.md
(+859 files in other folders)
